--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,30 @@
 {
-  "name": "functions",
-  "description": "Firebase Functions",
+  "name": "ratioBoard",
+  "description": "Actions SDK sample for Cloud Functions for Firebase",
+  "version": "0.0.1",
+  "private": true,
+  "license": "Apache-2.0",
+  "engines": {
+    "node": "~4.2"
+  },
+  "scripts": {
+    "lint": "eslint --fix \"**/*.js\"",
+    "start": "firebase serve --only functions",
+    "deploy": "firebase deploy --only functions",
+    "test": "npm run lint"
+  },
   "dependencies": {
-    "actions-on-google": "^1.0.7",
-    "firebase-admin": "^4.0.5",
-    "firebase-functions": "^0.5.1"
+    "actions-on-google": "^1.0.0",
+    "firebase-admin": "^4.2.1",
+    "firebase-functions": "^0.5.7"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-semistandard": "^11.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^5.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
